--- a/src/components/TitleCards/TitleCards.css
+++ b/src/components/TitleCards/TitleCards.css
@@ -12,6 +12,9 @@
     overflow-x: scroll;
 
 }
+.card-list::-webkit-scrollbar{
+    display: none;
+}
 .card-list img{
     width: 240px;
     border-radius: 4px;
